# flow_matching

./: .gitignore  .gitmodules  README.md  direction_only_straight_flow_agent_note.md  environment.server.yml  flow_matching_research_playground_brief.md  learned_acceleration_interpolants_agent_note.md  pyproject.toml
.superpowers/sdd/: task-1-report.md
configs/: azimuth_depth_product_pilot.yaml  camera_geometry_full_audit.yaml  camera_geometry_pilot.yaml  camera_geometry_pilot_narrow.yaml  illumination_photometry_full_audit.yaml  illumination_photometry_pilot.yaml  known_factor_calibration.yaml  product_preservation.yaml  view_sphere_translation_xyz_product_pilot.yaml
configs/cifar100_lt/: cifar100_lt_ir100_source_sloss_paperclose_baseline.yaml  cifar100_lt_ir100_source_sloss_paperclose_cm.yaml  cifar100_lt_ir100_source_sloss_paperclose_cm_no_oc.yaml
configs/cifar10_lt/: cifar10_lt_geometry_falsification.yaml  cifar10_lt_ir100_target_sloss_cm_no_oc_paperlike.yaml  cifar10_lt_ir100_target_sloss_cm_paperlike.yaml  cifar10_lt_ir100_target_sloss_paperlike.yaml  long_tail_geometry_natural_image_transport.yaml  long_tail_geometry_observation0_preregistration.yaml
configs/experiments/: two_moons_indep_vs_ot.yaml
configs/fashion_mnist_geometry_frequency/: stage0.yaml  stage1_all_classes.yaml  stage1_distinct5.yaml
configs/fashion_mnist_lt/: fashion_mnist_balanced_x_vloss.yaml  fashion_mnist_lt_geometry_stage0.yaml  fashion_mnist_lt_ir100.yaml  fashion_mnist_lt_ir100_target_sloss_cm_no_oc_paperlike.yaml  fashion_mnist_lt_ir100_target_sloss_cm_paperlike.yaml  fashion_mnist_lt_ir100_target_sloss_paperlike.yaml  fashion_mnist_lt_ir100_x_vloss.yaml  fashion_mnist_lt_ir100_x_vloss_cbdm.yaml  fashion_mnist_lt_ir100_x_vloss_cm.yaml  fashion_mnist_lt_ir100_x_vloss_cm_bounded_lambda10.yaml  fashion_mnist_lt_ir100_x_vloss_oc.yaml  (+3 more)
docs/: capacity_manipulation.md  cli.md  diagnostics.md  generated_dataset_workflow.md  imbdiff_cm_reproduction.md  jit_pixel_transformer_plan.md  long_tail_geometry_postmortem.md  official_imbdiff_cm_reproduction.md  official_imbdiff_matrix.md  server_cuda_setup.md
experiments/: geometry_explorer_app.py
fm_lab/: __init__.py
requirements/: torch-cu126.txt  torch-cuda-default.txt
scripts/: generate_synthetic_factor_benchmarks.py  generate_synthetic_long_tail.py  run_toy_baseline.sh
tests/: long_tail_geometry_helpers.py  probe_helpers.py  test_background_dominance.py  test_capacity_manipulation.py  test_celeba_loader.py  test_checkpoint_resume.py  test_cifar_background.py  test_cifar_lt_data.py  test_class_conditioning.py  test_comparison_runner.py  test_config_smoke.py  test_continuous_long_tail.py  test_ddpm_unet.py  test_diagnostic_sampling.py  test_diffusion_lid.py  test_direction_speed_model.py  test_discrete_diffusion.py  test_discrete_objective.py  test_discrete_sampling.py  test_docs_coverage.py  test_early_stopping.py  test_fashion_mnist_evaluator.py  test_fashion_mnist_frequency_response.py  test_fashion_mnist_geometry_frequency.py  test_fashion_mnist_lt_data.py  test_fashion_mnist_lt_eval.py  test_fashion_mnist_metric_calibration.py  test_fm_lid.py  test_geometry_explorer.py  test_image_diagnostics.py  test_image_generation.py  test_imagenet32_loader.py  test_imbdiff_cm_dropout.py  test_imbdiff_cm_dynamics.py  test_imbdiff_cm_intervention.py  test_imbdiff_cm_knowledge.py  test_imbdiff_cm_probe.py  test_imbdiff_cm_sampling.py  test_imbdiff_cm_sampling_visualization.py  test_imbdiff_eval.py  (+64 more)
(+436 files in other folders)
