[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fm-lab"
version = "0.1.0"
description = "Research playground for ambiguity, geometry, and solver sensitivity in flow matching."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fm_lab contributors" }]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "torch>=2.2",
  "tqdm>=4.66",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
fm-lab-diagnostics = "fm_lab.experiments.run_diagnostics:main"
fm-lab-field-diagnostics = "fm_lab.experiments.run_field_diagnostics:main"
fm-lab-geometry = "fm_lab.experiments.run_geometry:main"
fm-lab-compare-runs = "fm_lab.experiments.run_compare_runs:main"
fm-lab-mnist-eval = "fm_lab.experiments.run_mnist_eval:main"
fm-lab-run-comparison = "fm_lab.experiments.run_comparison:main"
fm-lab-solver-sensitivity = "fm_lab.experiments.run_solver_sensitivity:main"
fm-lab-train = "fm_lab.experiments.run_train:main"

[tool.setuptools.packages.find]
include = ["fm_lab*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
