[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fm-lab"
version = "0.1.0"
description = "Research playground for ambiguity, geometry, and solver sensitivity in flow matching."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fm_lab contributors" }]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "torch>=2.2",
  "tqdm>=4.66",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
image-generation = [
  "accelerate>=1.0",
  "diffusers",
  "Pillow>=10.0",
  "protobuf>=4.25",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
  "transformers>=4.50",
]
image-diagnostics = [
  "Pillow>=10.0",
  "pyarrow>=16.0",
  "streamlit>=1.58",
  "umap-learn>=0.5.6",
]
image-embeddings = [
  "torchvision",
  "transformers>=4.50",
]

[project.scripts]
fm-lab-diagnostics = "fm_lab.experiments.run_diagnostics:main"
fm-lab-field-diagnostics = "fm_lab.experiments.run_field_diagnostics:main"
fm-lab-fashion-mnist-lt-eval = "fm_lab.experiments.run_fashion_mnist_lt_eval:main"
fm-lab-explorer = "fm_lab.experiments.run_explorer:main"
fm-lab-geometry = "fm_lab.experiments.run_geometry:main"
fm-lab-compare-runs = "fm_lab.experiments.run_compare_runs:main"
fm-lab-mnist-eval = "fm_lab.experiments.run_mnist_eval:main"
fm-lab-run-comparison = "fm_lab.experiments.run_comparison:main"
fm-lab-solver-sensitivity = "fm_lab.experiments.run_solver_sensitivity:main"
fm-lab-sample-checkpoint = "fm_lab.experiments.run_sample_checkpoint:main"
fm-lab-sampling-timesteps = "fm_lab.geometry_explorer.sampling_timesteps:main"
fm-lab-imbdiff-eval = "fm_lab.experiments.run_imbdiff_eval:main"
fm-lab-train = "fm_lab.experiments.run_train:main"

[tool.setuptools.packages.find]
include = ["fm_lab*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
